libs/pavex_macros/tests/constructor/fail/invalid_lifecycle.rs
use pavex_macros::constructor;

pub struct A;

impl A {
    #[constructor(lifecycle = "request")]
    pub fn new() -> Self {
        A
    }
}

fn main() {}
