libs/pavex_macros/tests/constructor/fail/invalid_lifecycle.stderr
error: Unknown literal value `request`
 --> tests/constructor/fail/invalid_lifecycle.rs:6:31
  |
6 |     #[constructor(lifecycle = "request")]
  |                               ^^^^^^^^^
